Pre First Ccollab

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#FF6F66</color>
     <color name="colorPrimaryDark">#FF4F44</color>
     <color name="colorAccent">#777777</color>
+    <color name="colorLightGrey">#DDDDDD</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="black">#000000</color>
 </resources>
