--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/logo_farcita" />
+            android:src="@drawable/farcita_logo_white" />
     </LinearLayout>
 
     <LinearLayout
@@ -68,10 +68,6 @@
                         android:textColorHint="@color/colorWhite"
                         android:textSize="16sp" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/colorWhite"/>
             </LinearLayout>
 
 
@@ -83,6 +79,7 @@
                 android:layout_alignParentStart="true"
                 android:src="@drawable/ic_clear_white_24dp"
                 android:layout_gravity="center"
+                android:clickable="true"
                 android:visibility="invisible" />
         </LinearLayout>
 
@@ -120,14 +117,11 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:hint="Password"
+                        android:inputType="textPassword"
                         android:textColor="@color/colorWhite"
                         android:textColorHint="@color/colorWhite"
                         android:textSize="16sp" />
                 </LinearLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/colorWhite"/>
             </LinearLayout>
 
 
@@ -139,6 +133,7 @@
                 android:layout_alignParentStart="true"
                 android:src="@drawable/ic_clear_white_24dp"
                 android:layout_gravity="center"
+                android:clickable="true"
                 android:visibility="invisible" />
         </LinearLayout>
 
@@ -146,7 +141,8 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"></FrameLayout>
+            android:layout_weight="1">
+        </FrameLayout>
 
         <Button
             android:id="@+id/login_button"
