--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,180 +1,258 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_sign_up"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.farcita.www.farcita.views.activities.SignUpActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
+    android:background="@color/colorWhite">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"></LinearLayout>
-
-    <LinearLayout
+        android:layout_height="match_parent">
+    
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:hint="Restaurant Name"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorWhite"
-            android:textSize="16sp" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorWhite"></FrameLayout>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/openTime"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:text="Franchise"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/closeTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></Spinner>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/lat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/lng"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-    <LinearLayout
+        <TextView
+            android:id="@+id/text_farcita"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#c2949292"
+            android:textStyle="italic|bold"
+            android:text="Farcita"
+            android:textSize="20sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"/>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
+        android:layout_height="wrap_content"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="6dp"
+        android:layout_below="@+id/text_farcita">
+            <EditText
+            android:id="@+id/input_name"
+            android:textColor="#FF0000"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:hint="Contact Number"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorWhite"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content"
+            android:inputType="textCapWords"
+            android:hint="Restaurant Name"/>
+    </android.support.design.widget.TextInputLayout>
 
-        <FrameLayout
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/name_manager"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorWhite"></FrameLayout>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:layout_marginBottom="10dp"
+            android:layout_below="@+id/name">
+            <EditText
+                android:id="@+id/input_manager"
+                android:textColor="#FF0000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textCapWords"
+                android:hint="Manager Name"/>
+        </android.support.design.widget.TextInputLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:hint="E-Mail"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorWhite"
-            android:textSize="16sp" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorWhite"></FrameLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:hint="Website"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorWhite"
-            android:textSize="16sp" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorWhite"></FrameLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:hint="Manager Name"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorWhite"
-            android:textSize="16sp" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorWhite"></FrameLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:hint="Description"
-            android:textColor="@color/colorWhite"
-            android:textColorHint="@color/colorWhite"
-            android:textSize="16sp" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorWhite"></FrameLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
 
         <Button
+            android:id="@+id/franchise_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name_manager"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:layout_marginBottom="8dp"
+            android:text="Select   Franchise"
+            android:textSize="18sp"
+            android:textColor="#FF0000"
+            android:theme="@style/AppTheme.Button"
+            android:layout_alignStart="@+id/linearLayout"
+            android:layout_alignEnd="@+id/linearLayout"/>
+
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password"
+            android:layout_below="@+id/website"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"
-            android:text="Sign Up"
-            android:textAllCaps="false"
-            android:textSize="16sp" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:passwordToggleEnabled="true"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp">
+            <EditText android:id="@+id/input_password"
+                      android:textColor="#FF0000"
+                      android:layout_width="match_parent"
+                      android:layout_height="59dp"
+                      android:inputType="textPassword"
+                      android:hint="Password"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/confirm_password"
+            android:layout_below="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:layout_marginTop="3dp"
+            app:passwordToggleEnabled="true"
+            android:layout_marginBottom="4dp">
+            <EditText android:id="@+id/retype_password"
+                      android:textColor="#FF0000"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:inputType="textPassword"
+                      android:hint="Confirm Password"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/mobile"
+            android:layout_below="@+id/confirm_password"
+            android:layout_toRightOf="@+id/ccp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="4dp"
+            android:paddingRight="7dp"
+            android:layout_marginTop="8dp"
+            android:layout_alignParentEnd="true">
+            <EditText android:id="@+id/input_mobile"
+                      android:textColor="#FF0000"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:inputType="number"
+                      android:hint="Mobile"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:id="@+id/link_login"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="Already a member? Login"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:layout_below="@+id/btn_signup"/>
+
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/ccp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:contentColor="#c2949292"
+            app:defaultNameCode="IN"
+            android:layout_above="@+id/btn_signup"
+            android:layout_alignParentStart="true"></com.hbb20.CountryCodePicker>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/franchise_button"
+            android:layout_alignStart="@+id/btn_signup"
+            android:weightSum="4"
+            android:id="@+id/linearLayout"
+            android:layout_alignEnd="@+id/btn_signup">
+             <Button
+                 android:id="@+id/input_time1"
+                 android:layout_below="@+id/franchise_button"
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:paddingRight="7dp"
+                 android:theme="@style/AppTheme.Button"
+                 android:textSize="18sp"
+                 android:layout_weight="2"
+                 android:padding="15dp"
+                 android:text="Opening Time"/>
+
+             <Button
+                 android:id="@+id/input_time2"
+                 android:layout_toRightOf="@+id/input_time1"
+                 android:layout_below="@+id/name_franchise"
+                 android:layout_width="0dip"
+                 android:paddingLeft="7dp"
+                 android:layout_height="wrap_content"
+                 android:theme="@style/AppTheme.Button"
+                 android:layout_weight="2"
+                 android:textSize="18sp"
+                 android:padding="16dp"
+                 android:text="Closing Time"/>
+
+        </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+         android:id="@+id/email"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/linearLayout"
+         android:paddingLeft="7dp"
+         android:paddingRight="7dp"
+         android:layout_alignParentStart="true">
+         <EditText
+             android:id="@+id/input_email"
+             android:textColor="#FF0000"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:inputType="textEmailAddress"
+             android:hint="Email"/>
+     </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/website"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:layout_below="@+id/email"
+            android:layout_alignParentStart="true">
+            <EditText
+                android:id="@+id/input_website"
+                android:textColor="#FF0000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Website"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_signup"
+            android:layout_width="332dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:padding="7dp"
+            android:theme="@style/AppTheme.Button"
+            android:text="Create  Account"
+            android:layout_below="@+id/mobile"
+            android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
+
+    </ScrollView>
 
 </LinearLayout>
