--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,15 @@
     <color name="colorPrimaryDark">#FF4F44</color>
     <color name="colorAccent">#777777</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorFarcita">#FF6F66</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorLightGrey">#DDDDDD</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="feed_bg">#d3d6db</color>
+    <color name="feed_item_bg">#ffffff</color>
+    <color name="feed_item_border">#c2c3c8</color>
+    <color name="link">#0a80d1</color>
+    <color name="timestamp">#a0a3a7</color>
+
 </resources>
